2006-07-26  Till Kamppeter <till.kamppeter@gmx.net>

	* PPD/Kyocera/de/Kyocera_FS-1118MFP_de.ppd,
	  PPD/Kyocera/de/Kyocera_FS-920_de.ppd,
	  PPD/Kyocera/de/Kyocera_FS-C5020N_de.ppd,
	  PPD/Kyocera/de/Kyocera_FS-C5030N_de.ppd,
	  PPD/Kyocera/de/Kyocera_KM-3050_de.ppd,
	  PPD/Kyocera/de/Kyocera_KM-4050_de.ppd,
	  PPD/Kyocera/de/Kyocera_KM-5050_de.ppd,
	  PPD/Kyocera/de/Kyocera_KM-6030_de.ppd,
	  PPD/Kyocera/de/Kyocera_KM-8030_de.ppd,
	  PPD/Kyocera/en/Kyocera_FS-2000D_en.ppd,
	  PPD/Kyocera/en/Kyocera_FS-3900DN_en.ppd,
	  PPD/Kyocera/en/Kyocera_FS-4000DN_en.ppd,
	  PPD/Kyocera/en/Kyocera_FS-6950DN_en.ppd,
	  PPD/Kyocera/en/Kyocera_FS-9130DN_en.ppd,
	  PPD/Kyocera/en/Kyocera_FS-9530DN_en.ppd,
	  PPD/Kyocera/en/Kyocera_KM-3050_en.ppd,
	  PPD/Kyocera/en/Kyocera_KM-4050_en.ppd,
	  PPD/Kyocera/en/Kyocera_KM-5050_en.ppd,
	  PPD/Kyocera/en/Kyocera_KM-C2520_en.ppd,
	  PPD/Kyocera/en/Kyocera_KM-C3225_en.ppd,
	  PPD/Kyocera/en/Kyocera_KM-C3232_en.ppd,
	  PPD/Kyocera/es/Kyocera_FS-2000D_es.ppd,
	  PPD/Kyocera/es/Kyocera_FS-3900DN_es.ppd,
	  PPD/Kyocera/es/Kyocera_FS-4000DN_es.ppd,
	  PPD/Kyocera/es/Kyocera_FS-6950DN_es.ppd,
	  PPD/Kyocera/es/Kyocera_FS-9130DN_es.ppd,
	  PPD/Kyocera/es/Kyocera_FS-9530DN_es.ppd,
	  PPD/Kyocera/es/Kyocera_KM-C2520_es.ppd,
	  PPD/Kyocera/es/Kyocera_KM-C3225_es.ppd,
	  PPD/Kyocera/es/Kyocera_KM-C3232_es.ppd,
	  PPD/Kyocera/fr/Kyocera_FS-2000D_fr.ppd,
	  PPD/Kyocera/fr/Kyocera_FS-3900DN_fr.ppd,
	  PPD/Kyocera/fr/Kyocera_FS-4000DN_fr.ppd,
	  PPD/Kyocera/fr/Kyocera_FS-6950DN_fr.ppd,
	  PPD/Kyocera/fr/Kyocera_FS-9130DN_fr.ppd,
	  PPD/Kyocera/fr/Kyocera_FS-9530DN_fr.ppd,
	  PPD/Kyocera/fr/Kyocera_KM-C2520_fr.ppd,
	  PPD/Kyocera/fr/Kyocera_KM-C3225_fr.ppd,
	  PPD/Kyocera/fr/Kyocera_KM-C3232_fr.ppd,
	  PPD/Kyocera/it/Kyocera_FS-1118MFP_it.ppd,
	  PPD/Kyocera/it/Kyocera_FS-920_it.ppd,
	  PPD/Kyocera/it/Kyocera_FS-C5020N_it.ppd,
	  PPD/Kyocera/it/Kyocera_FS-C5030N_it.ppd,
	  PPD/Kyocera/it/Kyocera_KM-3050_it.ppd,
	  PPD/Kyocera/it/Kyocera_KM-4050_it.ppd,