@@ -1,0 +1,20 @@
+<driver id="driver/foo2kyo">
+    <name>foo2kyo</name>
+    <execution>
+        <filter />
+        <prototype>foo2kyo-wrapper %A</prototype>
+    </execution>
+    <comments> <en>
+        This is a driver developed for the Kyocera Mita FS-1016MFP
+        laser printer.
+
+        &lt;p&gt;
+        
+        It is possible that this driver will also work for other
+        Kyocera Mita printers, but the author cannot test this.
+    </en> </comments>
+    <printers>
+        <printer><id>printer/Kyocera-FS-1016MFP</id></printer>
+    </printers>
+</driver>
+
