@@ -1,0 +1,22 @@
+<option type="int" id="opt/foo2kyo-Brightness">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Brightness</en> </arg_longname>
+    <arg_shortname> <en>Brightness</en> </arg_shortname>
+    <arg_execution>
+        <arg_group>General</arg_group>
+	<arg_order>220</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto>-b%s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>foo2kyo</driver>
+	<arg_defval>4</arg_defval>
+	</constraint>
+    </constraints>
+    <arg_max>7</arg_max>
+    <arg_min>1</arg_min>
+</option>
