@@ -1,0 +1,60 @@
+<printer id="printer/Kyocera-FS-1016MFP">
+    <make>Kyocera</make>
+    <model>FS-1016MFP</model>
+    <mechanism>
+        <laser />
+        <resolution>
+            <dpi>
+                <x>600</x>
+                <y>600</y>
+            </dpi>
+        </resolution>
+        <margins>
+            <general>
+                <unit>mm</unit>
+                <top>4</top>
+                <bottom>4</bottom>
+                <left>4</left>
+                <right>4</right>
+            </general>
+        </margins>
+        <consumables>
+            <comments>
+                <en>Cartridge containing toner and imaging drum</en>
+            </comments>
+        </consumables>
+    </mechanism>
+    <lang>
+        <propietary/>
+    </lang>
+    <autodetect>
+        <usb>
+            <manufacturer>Kyocera</manufacturer>
+            <model>FS-1016MFP Printer</model>
+            <description>Kyocera  FS-1016MFP Printer</description>
+            <commandset>MFPXDMA</commandset>
+        </usb>
+    </autodetect>
+    <functionality>B</functionality>
+    <driver>foo2kyo</driver>
+    <comments>
+        <en>
+
+        One of the few printers made by Kyocera which do not
+        understand PCL or PostScript.&lt;p&gt;
+
+        Thanks to Florian Demski for writing this printer driver for
+        this device.&lt;p&gt;
+
+	For now only printing is supported, but work on scanning
+	support is in progress.&lt;p&gt;
+
+        Please everyone who has a Kyocera printer or MFP which does
+        not understand PCL or PostScript (or is too slow when using
+        these languages), test this driver and report the results,
+        preferably by a new printer entry.&lt;p&gt;
+
+	</en>
+    </comments>
+
+</printer>
