@@ -1,5 +1,13 @@
 2006-07-26  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* printer/Kyocera-FS-1016MFP.xml, driver/foo2kyo.xml,
+	  opt/foo2kyo-Brightness.xml, opt/foo2kyo-Copies.xml,
+	  opt/foo2kyo-Eco.xml, opt/foo2kyo-MediaType.xml,
+	  opt/foo2kyo-NupOrient.xml, opt/foo2kyo-Nup.xml,
+	  opt/foo2kyo-PageSize.xml: Added the Kyocera FS 1016MFP and the
+	  printer driver "foo2kyo" for it (Thanks to Florian Demski,
+	  fdemski at users dot sourceforge dot net).
+
 	* PPD/Kyocera/de/Kyocera_FS-1118MFP_de.ppd,
 	  PPD/Kyocera/de/Kyocera_FS-920_de.ppd,
 	  PPD/Kyocera/de/Kyocera_FS-C5020N_de.ppd,
